--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 go_module/test/server
 go_module/test/__debug_bin
 go_module/test/config.db
+go_module/test/cert.pem
+go_module/test/key.pem
+go_module/test/my.crt
+go_module/test/my.csr
+go_module/test/my.key
+go_module/test/nohup.out
+go_module/test/views/upload/hosts
+go_module/test/views/upload/v-2020.1.rar
+go_module/test/views/upload/*
+go_module/test/views/golang-developer-roadmap.png
